# A-IR-OB1

./: .env.example  .gitignore  .gitlab-ci.yml  EXAMPLES.md  README.md  README_NEW.md  RELEASE_NOTES.md  VALIDATION_MICRO_JALON_4_1_A.md  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
debug/: JALON_1_3_VALIDATION.md  JALON_2_1_VALIDATION.md  JALON_2_2_VALIDATION.md  README.md  example_openai_usage.py  start_and_validate.py  test_factory_simple.py  test_jalon_1_3.py  test_jalon_2_1.py  test_jalon_2_1_offline.py  test_jalon_2_2.py
docs/: ARCHITECTURE_JALON_4_3_SOLID.md  EXAMPLES.md  JALON_4_3_METRICS_DOCUMENTATION.md  JALON_4_3_PROMETHEUS_METRICS.md  MONITORING.md  README.md  SECURITY.md  VALIDATION_MICRO_JALON_4_1_B.md  VALIDATION_MICRO_JALON_4_2.md
docs/references/: doc-technique-api-agents-ia.md
src/: __init__.py
src/api/: __init__.py  dependencies.py  router.py
src/domain/: __init__.py  agent_orchestrator.py  agent_router.py  history_summarizer.py  llm_service_factory.py  llm_service_interface.py  resilient_llm_service.py  tracer.py
src/infrastructure/: __init__.py  secure_api_key_handler.py  session_manager.py  tool_executor.py  tools.py
src/infrastructure/llm_providers/: __init__.py  anthropic_adapter.py  deepseek_adapter.py  gemini_adapter.py  grok_adapter.py  kimi_k2_adapter.py  mistral_adapter.py  openai_adapter.py  qwen_adapter.py
src/infrastructure/monitoring/: __init__.py  metrics_collector.py
src/models/: __init__.py  data_contracts.py
tests/: __init__.py  test_llm_interface_validation.py
